--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
-      /* New background image solution */
       body {
         background-image: url('img/bg.jpg');
         background-position: center;
@@ -34,7 +33,6 @@
         background-color: white;
         position: relative;
       }
-      /* Special styling for the dark overlay card */
       .card.text-bg-dark {
         background-color: rgba(0, 0, 0, 0.7) !important;
       }
@@ -44,7 +42,7 @@
     </style>
   </head>
   <body>
-    <!-- Background overlay div -->
+   
     <div class="page-overlay"></div>
   
     <nav class="navbar navbar-expand-lg mb-4 nav rounded-bottom bg-black">
@@ -57,13 +55,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-white fw-bolder fs-3" href="#">Inicio</a>
+              <a class="nav-link text-white fw-bolder fs-3 text-center" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white fw-bolder fs-3" href="#">Seccion Masculina</a>
+              <a class="nav-link text-white fw-bolder fs-3 text-center" href="#">Seccion Masculina</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white fw-bolder fs-3" href="mujeres.html">Seccion Femenina</a>
+              <a class="nav-link text-white fw-bolder fs-3 text-center" href="mujeres.html">Seccion Femenina</a>
             </li>
           </ul>
         </div>
