--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav text-center">
             <li class="nav-item">
-              <a class="nav-link text-white fw-bolder fs-3 text-center" href="#">Inicio</a>
+              <a class="nav-link text-white fw-bolder fs-3" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white fw-bolder fs-3 text-center" href="#">Seccion Masculina</a>
+              <a class="nav-link text-white fw-bolder fs-3" href="#">Seccion Masculina</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white fw-bolder fs-3 text-center" href="mujeres.html">Seccion Femenina</a>
+              <a class="nav-link text-white fw-bolder fs-3" href="mujeres.html">Seccion Femenina</a>
             </li>
           </ul>
         </div>
@@ -194,8 +194,8 @@
         <div class="row g-3">
           <!-- Contact Information -->
           <div class="col-12 col-md-4 p-3">
-            <h3 class="h5">Restaurante Catracho</h3>
-            <address class="mb-0">
+            <h3 class="h5 text-center">Restaurante Catracho</h3>
+            <address class="mb-0 text-center">
               <p class="mb-1">123 Rue de la Pâtisserie</p>
               <p class="mb-1">París, Francia 75001</p>
               <p class="mb-1">+504 1234 5689</p>
@@ -205,8 +205,8 @@
 
           <!-- Links/Content Section -->
           <div class="col-12 col-md-4 p-3">
-            <h3 class="h5">Enlaces Rápidos</h3>
-            <ul class="list-unstyled">
+            <h3 class="h5  text-center">Enlaces Rápidos</h3>
+            <ul class="list-unstyled text-center">
               <li><a href="#" class="text-white text-decoration-none">Menú</a></li>
               <li><a href="#" class="text-white text-decoration-none">Reservaciones</a></li>
               <li><a href="#" class="text-white text-decoration-none">Galería</a></li>
@@ -215,8 +215,8 @@
 
           <!-- Hours Section -->
           <div class="col-12 col-md-4 p-3">
-            <h3 class="h5">Conéctate</h3>
-            <div class="d-flex gap-3">
+            <h3 class="h5 text-center">Conéctate</h3>
+            <div class="d-flex gap-3 text-center">
               <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
               <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
               <a href="#" class="text-white fs-4"><i class="bi bi-tiktok"></i></a>
