--- a/mujeres.html
+++ b/mujeres.html
@@ -48,7 +48,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav text-center">
             <li class="nav-item">
               <a class="nav-link text-white fw-bolder fs-4 " href="index.html">Inicio</a>
             </li>
@@ -130,8 +130,8 @@
         <div class="row g-3">
           <!-- Contact Information -->
           <div class="col-12 col-md-4 p-3">
-            <h3 class="h5">Restaurante Catracho</h3>
-            <address class="mb-0">
+            <h3 class="h5 text-center">Restaurante Catracho</h3>
+            <address class="mb-0 text-center">
               <p class="mb-1">123 Rue de la Pâtisserie</p>
               <p class="mb-1">París, Francia 75001</p>
               <p class="mb-1">+504 1234 5689</p>
@@ -141,8 +141,8 @@
 
           <!-- Links/Content Section -->
           <div class="col-12 col-md-4 p-3">
-            <h3 class="h5">Enlaces Rápidos</h3>
-            <ul class="list-unstyled">
+            <h3 class="h5 text-center">Enlaces Rápidos</h3>
+            <ul class="list-unstyled text-center">
               <li><a href="#" class="text-white text-decoration-none">Menú</a></li>
               <li><a href="#" class="text-white text-decoration-none">Reservaciones</a></li>
               <li><a href="#" class="text-white text-decoration-none">Galería</a></li>
@@ -151,8 +151,8 @@
 
           <!-- Hours Section -->
           <div class="col-12 col-md-4 p-3">
-            <h3 class="h5">Conéctate</h3>
-            <div class="d-flex gap-3">
+            <h3 class="h5 text-center">Conéctate</h3>
+            <div class="d-flex gap-3 text-center">
               <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
               <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
               <a href="#" class="text-white fs-4"><i class="bi bi-tiktok"></i></a>
