--- a/mujeres.html
+++ b/mujeres.html
@@ -152,7 +152,7 @@
           <!-- Hours Section -->
           <div class="col-12 col-md-4 p-3">
             <h3 class="h5 text-center">Conéctate</h3>
-            <div class="d-flex gap-3 text-center">
+            <div class="d-flex gap-3 justify-content-evenly">
               <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
               <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
               <a href="#" class="text-white fs-4"><i class="bi bi-tiktok"></i></a>
