--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
           <!-- Links/Content Section -->
           <div class="col-12 col-md-4 p-3">
-            <h3 class="h5  text-center">Enlaces Rápidos</h3>
+            <h3 class="h5 text-center">Enlaces Rápidos</h3>
             <ul class="list-unstyled text-center">
               <li><a href="#" class="text-white text-decoration-none">Menú</a></li>
               <li><a href="#" class="text-white text-decoration-none">Reservaciones</a></li>
@@ -216,7 +216,7 @@
           <!-- Hours Section -->
           <div class="col-12 col-md-4 p-3">
             <h3 class="h5 text-center">Conéctate</h3>
-            <div class="d-flex gap-3 text-center">
+            <div class="d-flex gap-3 justify-content-evenly">
               <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
               <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
               <a href="#" class="text-white fs-4"><i class="bi bi-tiktok"></i></a>
