--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a class="nav-link text-white fw-bolder fs-3" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white fw-bolder fs-3" href="#">Seccion Masculina</a>
+              <a class="nav-link text-white fw-bolder fs-3" href="hombres.html">Seccion Masculina</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white fw-bolder fs-3" href="mujeres.html">Seccion Femenina</a>
